--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,19 @@ body {
   margin: 50px auto;
   color:white;
   align-items: center;
+  text-align: center;
 }
 
 .quote {
+  border-radius: 10px;
+  padding:10px;
   display:flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   background-color: grey;
   text-align: center;
+  color: rgb(52, 73, 94);
 }
 
 .quote h2 {
@@ -42,6 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 button {
@@ -54,4 +59,5 @@ button {
   text-transform: uppercase;
   padding: 10px;
   font-size: 1.5em;
+  min-width:270px;
 }
