--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,10 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: grey;
   text-align: center;
-  color: rgb(52, 73, 94);
+  background:  linear-gradient(to bottom, rgba(250,250,250,1) 0%, rgba(219,219,219,1) 45%, rgba(94,88,94,1) 100%);
+  color: rgb(23, 32, 42);
+  min-height:300px;
 }
 
 .quote h2 {
@@ -42,11 +43,11 @@ body {
 }
 
 .button {
-  margin: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  align-self: center;
 }
 
 button {
