--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,28 @@ button {
   font-size: 1.5em;
   min-width:270px;
 }
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  align-self: center;
+  flex-direction: column;
+}
+
+.select{
+  height: 70px;
+  width:90px;
+  border-radius: 10px;
+}
+
+.submit {
+  background-color: rgb(0, 179, 144);
+  height: 45px;
+  color: white;
+  border-radius: 10px;
+  margin: 15px 25%;
+  width: 200px;
+  font-size: 1.5rem;
+}
