--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body {
 
 .quote {
   border-radius: 10px;
-  padding:10px;
+  padding:20px;
+  font-style: italic;
   display:flex;
   justify-content: center;
   flex-direction: column;
@@ -56,7 +57,8 @@ button {
   height: 45px;
   color: white;
   border-radius: 10px;
-  margin: 15px 25%;
+  margin-top: 15px;
+  margin-bottom:30px;
   text-transform: uppercase;
   padding: 10px;
   font-size: 1.5em;
@@ -73,9 +75,10 @@ button {
 }
 
 .select{
-  height: 70px;
-  width:90px;
+  height: 60px;
+  width:150px;
   border-radius: 10px;
+  font-size: 25px;
 }
 
 .submit {
@@ -83,7 +86,7 @@ button {
   height: 45px;
   color: white;
   border-radius: 10px;
-  margin: 15px 25%;
-  width: 200px;
-  font-size: 1.5rem;
+  margin: 15px auto;
+  width: 250px;
+  font-size: 1.2rem;
 }
