--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 button {
-  width: 50%;
+  width: 40%;
   background-color: rgb(0, 179, 144);
   height: 45px;
   color: white;
@@ -63,6 +63,7 @@ button {
   padding: 10px;
   font-size: 1.5em;
   min-width:270px;
+  cursor:pointer;
 }
 
 .form {
@@ -78,15 +79,17 @@ button {
   height: 60px;
   width:150px;
   border-radius: 10px;
-  font-size: 25px;
+  font-size: 1rem;
+  padding: 0 20px;
 }
 
 .submit {
+  width: 40%;
   background-color: rgb(0, 179, 144);
   height: 45px;
   color: white;
   border-radius: 10px;
   margin: 15px auto;
-  width: 250px;
-  font-size: 1.2rem;
+  min-width: 270px;
+  font-size: 1rem;
 }
